<resources>
    <string name="app_name">UTtimetable</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="clear_selections">Clear Selections</string>


    <string name="title_activity_browser">BrowserActivity</string>
    <string name="search_bar_hint"> Input course. Eg: CSC180H1F</string>
    <string name="search_button">Search</string>
    <string name="incomplete_search_area_introduction">Search a course to see the introduction here.</string>
    <string name="button_timetable_tab_string">Timetable</string>
    <string name="button_browser_tab_string">Browser</string>

    <string name="Monday_str">Mon</string>
    <string name="Tuesday_str">Tue</string>
    <string name="Wednesday_str">Wed</string>
    <string name="Thursday_str">Thu</string>
    <string name="Friday_str">Fri</string>

    <string name="select_button_text">Select</string>
    <string name="unselect_button_text">Drop</string>
</resources>
