<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin_bottom"
    tools:context=".TimetableActivity"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/search_bar_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inputCourseEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_bar_hint"/>
        <Button
            android:id="@+id/searchCourseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:clickable="false"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/introView_height"
        android:id="@+id/introductionTextView"
        android:layout_below="@id/search_bar_area"
        android:scrollbars = "vertical"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/candidate_courses"
        android:layout_below="@id/introductionTextView"
        android:layout_above="@+id/tabs_area">

    </ListView>
    <LinearLayout
        android:id="@id/tabs_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/timetable_tab_button"
            android:text="@string/button_timetable_tab_string"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/browser_tab_button"
            android:text="@string/button_browser_tab_string"/>
    </LinearLayout>

</RelativeLayout>